--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -154,4 +154,30 @@ a {
 @media screen and (min-width: 1024px) {
   .list--tick .list__item::before {
     padding: 0 0.5rem 0 0.5rem;
+  }
+}
+
+/* icon */
+
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon--accent {
+  fill: var(--color-accent);
+}
+
+.icon-container {
+  display: inline-flex;
+  width: 65px;
+  height: 65px;
+  border-radius: 100%;
+  background-color: lightgray;
+  justify-content: center;
+  align-items: center;
 }
