--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -10,6 +10,12 @@ html {
   --color-body: #918ca4;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box; /*for all item size maximum align to border box */
+}
+
 body {
   font-size: 2.4rem;
   line-height: 1.5;
@@ -84,6 +90,7 @@ a {
 /* badge */
 
 .badge {
+  display: inline-block;
   border-radius: 20px;
   font-size: 2rem;
   font-weight: 600;
@@ -180,4 +187,69 @@ a {
   background-color: lightgray;
   justify-content: center;
   align-items: center;
+}
+
+.btn {
+  text-align: center;
+  border-radius: 50px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 2.5rem;
+  width: 100%;
+  margin: 1rem 0;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  white-space: nowrap; /* this it to prevernt text in the button go the another line whrn theres limited space.  */
+}
+
+.btn--primary {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.btn--primary:hover {
+  background-color: rgb(0, 104, 189);
+}
+
+.btn--secondary {
+  background-color: var(--color-seconday);
+  color: white;
+}
+
+.btn--secondary:hover {
+  background-color: rgb(0, 202, 216);
+}
+
+.btn--accent {
+  background-color: var(--color-accent);
+  color: white;
+}
+
+.btn--accent:hover {
+  background-color: rgb(255, 56, 56);
+}
+
+.btn--transparency {
+  display: inline-block; /* "in line element" cannot set width, this will gv ANCHOR/SPAN element to apply width. */
+  background-color: rgba(255, 255, 255, 0);
+  color: var(--color-heading);
+
+  border: 5px solid var(--color-heading);
+}
+
+.btn--transparency:hover {
+  background-color: rgba(142, 153, 255, 0.37);
+}
+
+.btn--transparency:focus {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border-color: white;
+}
+
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.5rem;
+  }
 }
