--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -8,6 +8,8 @@ html {
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 30px;
 }
 
 *,
@@ -17,10 +19,10 @@ html {
 }
 
 body {
+  color: var(--color-body);
+  font-family: "roboto", Arial, Helvetica, sans-serif;
   font-size: 2.4rem;
   line-height: 1.5;
-  font-family: "roboto", Arial, Helvetica, sans-serif;
-  color: var(--color-body);
 }
 
 h1,
@@ -90,8 +92,8 @@ a {
 /* badge */
 
 .badge {
+  border-radius: var(--border-radius);
   display: inline-block;
-  border-radius: 20px;
   font-size: 2rem;
   font-weight: 600;
   padding: 0.5rem 2rem;
@@ -180,27 +182,30 @@ a {
 }
 
 .icon-container {
-  display: inline-flex;
-  width: 65px;
-  height: 65px;
-  border-radius: 100%;
-  background-color: lightgray;
-  justify-content: center;
   align-items: center;
+  background-color: lightgray;
+  border-radius: 100%;
+  display: inline-flex;
+  height: 65px;
+  justify-content: center;
+  width: 65px;
 }
 
 .btn {
-  text-align: center;
-  border-radius: 50px;
+  border-radius: var(--border-radius);
+  border: 0;
+  cursor: pointer;
   font-size: 1.8rem;
   font-weight: 600;
-  padding: 2.5rem;
-  width: 100%;
   margin: 1rem 0;
-  border: 0;
   outline: 0;
-  cursor: pointer;
+  padding: 2rem;
+  text-align: center;
   white-space: nowrap; /* this it to prevernt text in the button go the another line whrn theres limited space.  */
+}
+
+.btn--block {
+  width: 100%;
 }
 
 .btn--primary {
@@ -231,11 +236,10 @@ a {
 }
 
 .btn--transparency {
-  display: inline-block; /* "in line element" cannot set width, this will gv ANCHOR/SPAN element to apply width. */
   background-color: rgba(255, 255, 255, 0);
-  color: var(--color-heading);
-
   border: 5px solid var(--color-heading);
+  color: var(--color-heading);
+  display: inline-block; /* "in line element" cannot set width, this will gv ANCHOR/SPAN element to apply width. */
 }
 
 .btn--transparency:hover {
@@ -251,5 +255,45 @@ a {
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
+  }
+}
+
+.input {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
+  color: var(--color-heading);
+  font-size: 2rem;
+  outline: 0;
+  padding: 1.5rem 3.5rem;
+}
+
+::placeholder {
+  color: #918ca4;
+  font-size: 1.5rem;
+}
+
+.input-group {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
+  display: flex;
+}
+
+.input-group .input {
+  border: 0;
+  padding: 0 2rem;
+  flex-grow: 1;
+}
+
+.input-group .btn {
+  margin: 5px;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
+
+  ::placeholder {
+    font-size: 1rem;
   }
 }
