--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -4,7 +4,7 @@ html {
 
 :root {
   --color-primary: #2584ff;
-  --color-seconday: #00d9ff;
+  --color-secondary: #00d9ff;
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
@@ -23,6 +23,7 @@ body {
   font-family: "roboto", Arial, Helvetica, sans-serif;
   font-size: 2.4rem;
   line-height: 1.5;
+  padding: 10px;
 }
 
 h1,
@@ -106,12 +107,13 @@ a {
 }
 
 .badge--secondary {
-  background-color: var(--color-seconday);
+  background-color: var(--color-secondary);
   color: white;
 }
 
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -160,6 +162,10 @@ a {
   content: url(../images/tick.svg);
 }
 
+/* .list--tick .list__item {
+  font-weight: 400;
+} */
+
 @media screen and (min-width: 1024px) {
   .list--tick .list__item::before {
     padding: 0 0.5rem 0 0.5rem;
@@ -197,7 +203,6 @@ a {
   cursor: pointer;
   font-size: 1.8rem;
   font-weight: 600;
-  margin: 1rem 0;
   outline: 0;
   padding: 2rem;
   text-align: center;
@@ -218,7 +223,7 @@ a {
 }
 
 .btn--secondary {
-  background-color: var(--color-seconday);
+  background-color: var(--color-secondary);
   color: white;
 }
 
@@ -237,7 +242,7 @@ a {
 
 .btn--transparency {
   background-color: rgba(255, 255, 255, 0);
-  border: 5px solid var(--color-heading);
+  border: 3px solid var(--color-heading);
   color: var(--color-heading);
   display: inline-block; /* "in line element" cannot set width, this will gv ANCHOR/SPAN element to apply width. */
 }
@@ -295,5 +300,89 @@ a {
 
   ::placeholder {
     font-size: 1rem;
+  }
+}
+
+.card {
+  border-radius: 10px;
+  width: 50%;
+  box-shadow: 0 0 20px 20px rgb(233, 233, 233);
+  overflow: hidden;
+  margin: 1rem;
+  display: inline-block;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.card--secondary .card__header {
+  background-color: var(--color-secondary);
+  color: white;
+}
+
+.card--primary .badge--primary {
+  background-color: rgb(66, 115, 207);
+  letter-spacing: 1px;
+  font-weight: 550;
+}
+
+.card--secondary .badge--secondary {
+  background-color: rgb(0, 207, 235);
+  letter-spacing: 1px;
+  font-weight: 550;
+}
+
+.plan__name {
+  font-size: 2.4rem;
+  margin: 0;
+  color: white;
+  font-weight: 500;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__month {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+
+.plan__text {
+  display: block;
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+}
+
+.plan .btn {
+  margin: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+  .plan__price {
+    font-size: 5rem;
+  }
+  .plan__month {
+    font-size: 1.6rem;
+  }
+  .plan__text {
+    font-size: 1.7rem;
   }
 }
