--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -309,7 +309,6 @@ a {
   box-shadow: 0 0 20px 20px rgb(233, 233, 233);
   overflow: hidden;
   margin: 1rem;
-  display: inline-block;
 }
 
 .card__header,
@@ -370,6 +369,19 @@ a {
 
 .plan .btn {
   margin: 0;
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: inline-block; /* images is inline element */
+  position: absolute;
+  top: -5px;
+  right: 5%;
 }
 
 @media screen and (min-width: 1024px) {
