--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -305,7 +305,7 @@ a {
 
 .card {
   border-radius: 10px;
-  width: 50%;
+  width: 100%;
   box-shadow: 0 0 20px 20px rgb(233, 233, 233);
   overflow: hidden;
   margin: 1rem;
@@ -385,6 +385,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .card {
+    width: 50%;
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -397,4 +401,22 @@ a {
   .plan__text {
     font-size: 1.7rem;
   }
+}
+
+.media {
+  display: flex; /* use flex to lay object horizontally */
+}
+
+.media__title {
+  margin-top: 0;
+}
+.media__body {
+  margin: 0 2rem;
+}
+.media__image {
+  margin-top: 1rem;
+}
+.media .icon {
+  width: 50px;
+  height: 50px;
 }
