--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -8,6 +8,7 @@ html {
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker: #706c7e;
   --color-border: #ccc;
   --border-radius: 30px;
 }
@@ -419,4 +420,51 @@ a {
 .media .icon {
   width: 50px;
   height: 50px;
+}
+
+.quote__text {
+  font-size: 3rem;
+  font-style: italic;
+  line-height: 1.3;
+  color: var(--color-body-darker);
+}
+
+.quote .quote__text::before {
+  content: open-quote;
+}
+.quote .quote__text::after {
+  content: close-quote;
+}
+
+.quote .media__title {
+  font-weight: 600;
+  font-size: 3.5rem;
+  margin-bottom: -0.5rem;
+}
+
+.quote .media__company {
+  font-size: 2.3rem;
+  color: var(--color-heading);
+  opacity: 0.4;
+  font-weight: 500;
+}
+
+.quote .media__image {
+  position: relative;
+  bottom: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+  .quote .media__title {
+    font-size: 2.5rem;
+  }
+  .quote .media__company {
+    font-size: 1.6rem;
+  }
+  .quote .media__image {
+    bottom: 17px;
+  }
 }
