--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -468,3 +468,52 @@ a {
     bottom: 17px;
   }
 }
+
+.grid {
+  height: 100px;
+  display: grid;
+}
+
+.grid--1x3 .grid__column-1st {
+  background-color: gold;
+}
+.grid--1x3 .grid__column-2nd {
+  background-color: dodgerblue;
+}
+.grid--1x3 .grid__column-3rd {
+  background-color: red;
+}
+
+/* .grid--1x2 .grid__column-1st {
+  background-color: gold;
+}
+.grid--1x2 .grid__column-2nd {
+  background-color: dodgerblue;
+}
+.grid--1x2 .grid__column-3rd {
+  background-color: red;
+}
+
+@media screen and (min-width: 1px) {
+  .grid--1x2 .grid__column-3rd {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .grid--1x2 .grid__column-3rd {
+    display: none;
+  }
+} */
+
+@media screen and (min-width: 1024px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  /* .grid--1x3 .grid__column-3rd {
+    display: inherit;
+  } */
+}
