--- a/components/quote.html
+++ b/components/quote.html
@@ -3,16 +3,17 @@
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, laborum
     itaque sit hic delectus id provident tenetur aut obcaecati natus.
   </p>
-
-  <div class="media">
-    <div class="media__image">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#line"></use>
-      </svg>
+  <footer>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#line"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title quote__author">John Smith</h3>
+        <p class="quote__company">ABC Company</p>
+      </div>
     </div>
-    <div class="media__body">
-      <h3 class="media__title">John Smith</h3>
-      <p class="media__company">ABC Company</p>
-    </div>
-  </div>
+  </footer>
 </blockquote>
