--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -1,5 +1,7 @@
 html {
   font-size: 62.5%;
+  display: flex;
+  justify-content: center;
 }
 
 :root {
@@ -25,6 +27,7 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   padding: 10px;
+  max-width: 1024px;
 }
 
 h1,
@@ -226,6 +229,11 @@ a {
   width: 100%;
 }
 
+.btn--long {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
 .btn--primary {
   background-color: var(--color-primary);
   color: white;
@@ -261,7 +269,7 @@ a {
 }
 
 .btn--transparency:hover {
-  background-color: rgba(142, 153, 255, 0.37);
+  background-color: rgba(212, 30, 30, 0.37);
 }
 
 .btn--transparency:focus {
@@ -436,6 +444,7 @@ a {
   font-style: italic;
   line-height: 1.3;
   color: var(--color-body-darker);
+  margin: 2rem 1.5rem;
 }
 
 .quote .quote__text::before {
@@ -447,13 +456,13 @@ a {
 
 .quote__author {
   font-weight: 600;
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 0;
   font-style: normal;
 }
 
 .quote__company {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--color-heading);
   opacity: 0.4;
   font-weight: 500;
@@ -465,15 +474,15 @@ a {
   bottom: 20px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .quote {
     font-size: 2rem;
   }
   .quote__author {
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
   .quote__company {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
   .quote .media__image {
     bottom: 22px;
@@ -529,12 +538,17 @@ a {
   }
 } */
 
+/* Testimonial */
+
 .testimonial {
   padding: 3rem;
+  display: flex;
+  justify-content: center;
 }
 
 .testimonial--container {
   padding: 3rem;
+  max-width: 768px;
 }
 
 .testimonial__image > img {
@@ -558,12 +572,71 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .testimonial .quote,
+  /* .testimonial .quote,
   .testimonial .quote__author {
     font-size: 2.5rem;
+  } */
+  .testimonial .quote {
+    margin: 1rem 5rem;
   }
-
   .testimonial__image > span {
     right: -30px;
+  }
+
+
+/* Callout */
+
+.callout {
+  display: flex;
+  justify-content: center;
+}
+
+.callout .grid {
+  padding: 3rem;
+  border-radius: 10px;
+  background-color: var(--color-primary);
+  max-width: 1024px;
+}
+
+.callout .btn {
+  align-self: center;
+  justify-self: center;
+}
+
+.callout .btn--long > a{
+  color: white;
+}
+
+.callout--info {
+  text-align: center;
+}
+
+.callout__heading {
+  color: white;
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.callout__text {
+  color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .callout--info {
+    text-align: left;
+  }
+
+  .callout__text {
+    color: white;
+    margin-bottom: 0;
+  }
+
+  .callout .btn {
+    justify-self: start;
+    margin: 2rem;
+  }
+
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
   }
 }
