--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -37,6 +37,8 @@ h2,
 h3 {
   color: var(--color-heading);
   margin-bottom: 1rem;
+  line-height: 1.1;
+  letter-spacing: 2px;
 }
 
 h1 {
@@ -280,11 +282,18 @@ a {
   border-color: white;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .btn {
     font-size: 1.5rem;
   }
+
+  .btn--long {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
+
+/* Input */
 
 .input {
   border-radius: var(--border-radius);
@@ -662,7 +671,7 @@ a {
 
 .block p {
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding: 1rem;
 }
 
@@ -671,6 +680,15 @@ a {
   color: #706c7e;
 }
 
+/* .block--bg {
+  background-image: url(../images/banner.png);
+  background-position: center;
+  background-size: 200px;
+  background-repeat: no-repeat;
+  opacity: 0.4;
+  border: 0;
+} */
+
 .block--dark .block__heading,
 .block--dark p {
   color: white;
@@ -678,7 +696,7 @@ a {
 
 .block--skew-right {
   padding-bottom: calc(var(--padding-vertical) + 2.5rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
 }
 
 .block__banner-img {
@@ -686,6 +704,7 @@ a {
   height: 200px;
   display: none;
   position: absolute;
+  justify-self: center;
   opacity: 0.4;
 }
 
@@ -698,7 +717,7 @@ a {
     opacity: 1;
   }
 
-  .block .grid--1x2 {
+  .block--bg .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
 
@@ -829,5 +848,62 @@ a {
   .nav__list .list__item {
     font-size: 2rem;
     border: 0;
+  }
+}
+
+/* hero */
+
+.hero__img {
+  width: 100%;
+}
+
+.hero--content .block__heading {
+  font-size: 6rem;
+}
+
+.hero--content .hero__tagline {
+  font-size: 2rem;
+  color: rgb(99, 107, 114);
+  padding: 2rem 0 5rem;
+  letter-spacing: 1px;
+}
+
+.hero {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+}
+
+@media screen and (min-width: 768px) {
+  .hero--content {
+    text-align: left;
+    align-self: center;
+  }
+  .hero--content .block__heading {
+    font-size: 4.9rem;
+  }
+
+  .hero--content .hero__tagline {
+    font-size: 2rem;
+  }
+
+  .hero {
+    padding-top: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero--content {
+    text-align: left;
+    align-self: center;
+  }
+  .hero--content .block__heading {
+    font-size: 7rem;
+  }
+
+  .hero--content .hero__tagline {
+    font-size: 2rem;
+  }
+
+  .hero {
+    padding-top: 0;
   }
 }
