--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -853,7 +853,7 @@ a {
 
 /* hero */
 
-.hero__img {
+.hero__image {
   width: 100%;
 }
 
@@ -890,7 +890,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1124px) {
   .hero--content {
     text-align: left;
     align-self: center;
