--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -38,7 +38,6 @@ h3 {
   color: var(--color-heading);
   margin-bottom: 1rem;
   line-height: 1.1;
-  letter-spacing: 2px;
 }
 
 h1 {
@@ -55,7 +54,7 @@ p {
   margin-top: 0;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   body {
     font-size: 1.8rem;
   }
@@ -124,7 +123,7 @@ a {
   padding: 0.5rem 1.5rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .badge {
     font-size: 1.5rem;
   }
@@ -178,6 +177,10 @@ a {
   .list--tick .list__item::before {
     padding: 0 0.5rem 0 0.5rem;
   }
+
+  .list {
+    font-size: 1.5rem;
+  }
 }
 
 /* icon */
@@ -205,7 +208,7 @@ a {
 
 .icon-container {
   align-items: center;
-  background-color: lightgray;
+  background-color: rgb(232, 238, 237);
   border-radius: 100%;
   display: inline-flex;
   height: 65px;
@@ -224,9 +227,17 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   outline: 0;
+  margin: 1rem 0;
   padding: 2rem;
   text-align: center;
   white-space: nowrap; /* this it to prevernt text in the button go the another line whrn theres limited space.  */
+}
+
+.btn .icon {
+  vertical-align: middle;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
 }
 
 .btn--block {
@@ -273,7 +284,9 @@ a {
 }
 
 .btn--transparency:hover {
-  background-color: rgba(212, 30, 30, 0.37);
+  background-color: var(--color-heading);
+  color: white;
+  border-color: white;
 }
 
 .btn--transparency:focus {
@@ -327,11 +340,11 @@ a {
 
 @media screen and (min-width: 1024px) {
   .input {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   ::placeholder {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -346,7 +359,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 2rem 2rem;
 }
 
 .card--primary .card__header {
@@ -412,10 +425,10 @@ a {
 
 .plan--popular .card__header::before {
   content: url(../images/popular.svg);
-  width: 40px;
+  width: 4rem;
   display: inline-block; /* images is inline element */
   position: absolute;
-  top: -5px;
+  top: -6px;
   right: 5%;
 }
 
@@ -432,7 +445,16 @@ a {
   .plan__text {
     font-size: 1.7rem;
   }
+  .plan--popular .card__header::before {
+    width: 3rem;
+  }
+
+  .plan--popular {
+    transform: scale(1.1);
+  }
 }
+
+/* media */
 
 .media {
   display: flex; /* use flex to lay object horizontally */
@@ -509,49 +531,17 @@ a {
   display: grid;
 }
 
-/* .grid--1x3 .grid__column-1st {
-  background-color: gold;
-}
-.grid--1x3 .grid__column-2nd {
-  background-color: dodgerblue;
-}
-.grid--1x3 .grid__column-3rd {
-  background-color: red;
-} */
-
-.grid--1x2 .grid__column-1st {
-  background-color: gold;
-}
-.grid--1x2 .grid__column-2nd {
-  background-color: dodgerblue;
-}
-.grid--1x2 .grid__column-3rd {
-  background-color: red;
-}
-
-@media screen and (min-width: 1px) {
-  .grid--1x2 .grid__column-3rd {
-    display: none;
-  }
-}
-
 @media screen and (min-width: 768px) {
-  .grid {
+  .grid--1x2 {
     grid-template-columns: repeat(2, 1fr);
   }
-  .grid--1x2 .grid__column-3rd {
-    display: none;
-  }
 }
 
-/* @media screen and (min-width: 1024px) {
-  .grid {
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
   }
-  .grid--1x3 .grid__column-3rd {
-    display: inherit;
-  }
-} */
+}
 
 /* Testimonial */
 
@@ -666,13 +656,10 @@ a {
 
 .block__heading {
   margin-top: 0;
-  font-size: 3rem;
 }
 
-.block p {
+.block .block--header {
   margin-bottom: 0;
-  font-size: 1.5rem;
-  padding: 1rem;
 }
 
 .block--dark {
@@ -720,11 +707,9 @@ a {
   .block--bg .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
-
-  .block p {
-    font-size: 1.5rem;
-  }
 }
+
+/* collapsible */
 
 .collapsible--header {
   display: flex;
@@ -859,6 +844,7 @@ a {
 
 .hero--content .block__heading {
   font-size: 6rem;
+  letter-spacing: 2px;
 }
 
 .hero--content .hero__tagline {
@@ -905,5 +891,88 @@ a {
 
   .hero {
     padding-top: 0;
+  }
+}
+
+.domain--content .input-group {
+  box-shadow: 0 0 20px 10px rgb(224, 224, 224);
+  border: 0;
+  margin: 3rem auto;
+  max-width: 650px;
+}
+
+.block-domain__prices {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 6rem);
+  font-size: 2rem;
+  font-weight: 600;
+  justify-items: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    font-size: 1.8rem;
+  }
+}
+
+/* Plans block */
+
+.block-plans .grid {
+  gap: 8rem 5rem;
+}
+
+.block-plans .card {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.block-plans .plan {
+  transition: transform 0.2s ease-out;
+}
+
+.block-plans .block--popular {
+  transform: scale(1.5);
+}
+
+.block .plan:hover {
+  transform: scale(1.05);
+}
+
+.block .plan--popular:hover {
+  transform: scale(1.05);
+}
+
+@media screen and (min-width: 1024px) {
+  .block .plan--popular:hover {
+    transform: scale(1.15);
+  }
+}
+
+/* Feature content */
+
+.feature__img {
+  width: 100%;
+}
+
+.feature__heading {
+  margin: 1rem 0;
+}
+
+.feature {
+  gap: 4rem 2rem;
+  margin: 12rem 0;
+}
+
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 2;
   }
 }
