--- a/ycyc CSS/style.css
+++ b/ycyc CSS/style.css
@@ -24,7 +24,6 @@ body {
   font-family: "roboto", Arial, Helvetica, sans-serif;
   font-size: 2.4rem;
   line-height: 1.5;
-  padding: 10px;
 }
 
 .container {
@@ -48,6 +47,7 @@ h2 {
 }
 h3 {
   font-size: 3rem;
+  font-weight: 500;
 }
 
 p {
@@ -137,6 +137,9 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
+}
+
+.list .list__item {
   color: var(--color-heading);
 }
 
@@ -458,13 +461,15 @@ a {
 
 .media {
   display: flex; /* use flex to lay object horizontally */
+  margin-bottom: 4rem;
 }
 
 .media__title {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 .media__body {
-  margin: 0 1.5rem;
+  margin: 0 2rem;
 }
 .media__image {
   margin-top: 1rem;
@@ -546,7 +551,6 @@ a {
 /* Testimonial */
 
 .testimonial {
-  padding: 3rem;
   display: flex;
   justify-content: center;
 }
@@ -652,6 +656,7 @@ a {
   text-align: center;
   z-index: 999;
   align-self: center;
+  margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -659,7 +664,7 @@ a {
 }
 
 .block .block--header {
-  margin-bottom: 0;
+  margin-bottom: ;
 }
 
 .block--dark {
@@ -676,14 +681,16 @@ a {
   border: 0;
 } */
 
-.block--dark .block__heading,
-.block--dark p {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3,
+.block--dark h4 {
   color: white;
 }
 
 .block--skew-right {
   padding-bottom: calc(var(--padding-vertical) + 2.5rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
 .block__banner-img {
@@ -766,6 +773,14 @@ a {
   color: var(--color-body-darker);
 }
 
+/* Nav Bar section*/
+
+.nav--block {
+  padding: 1rem 0;
+  background-color: black;
+  border-bottom: 2px solid rgb(29, 29, 29);
+}
+
 .nav {
   background-color: black;
   display: flex;
@@ -800,6 +815,7 @@ a {
   fill: darkgrey;
   cursor: pointer;
   transition: box-shadow 0.15s;
+  margin-right: 2rem;
 }
 
 .nav__toggler:hover {
@@ -968,11 +984,33 @@ a {
 }
 
 .feature:first-of-type {
-  margin-top: 6rem;
+  margin-top: 0;
 }
 
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
+  }
+}
+
+/* Showcase section */
+
+.block--showcase__img > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .block--showcase__img {
+    justify-self: end;
+  }
+
+  .block--showcase__img > img {
+    width: auto;
+    max-width: 700px;
+  }
+
+  .block--showcase .grid {
+    grid-template-columns: 50% 50%;
+    gap: 2rem;
   }
 }
