--- a/components/block.html
+++ b/components/block.html
@@ -21,3 +21,32 @@
     </header>
   </div>
 </div>
+
+<div class="block block--dark block--skew-right block--bg">
+  <div class="grid grid--1x2">
+    <header class="block--header">
+      <h2 class="block__heading">Title</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis rerum
+        impedit exercitationem qui mollitia temporibus voluptate, earum dolorum
+        illum error.
+      </p>
+    </header>
+
+    <picture>
+      <source
+        type="image/webp"
+        srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+      />
+      <source
+        type="image/png"
+        srcset="images/banner.png 1x, images/banner@2x.png 2x"
+      />
+      <img
+        class="block__banner-img"
+        src="images/banner.png"
+        alt="banner image"
+      />
+    </picture>
+  </div>
+</div>
