--- a/components/callout.html
+++ b/components/callout.html
@@ -12,3 +12,18 @@
     </div>
   </div>
 </div>
+
+<!-- <div class="callout container">
+      <div class="grid grid--1x2">
+        <div class="callout--info">
+          <h2 class="callout__heading">Ready To Get Started?</h2>
+          <p class="callout__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            sapiente veniam maiores neque eaque necessitatibus.
+          </p>
+        </div>
+        <div class="btn btn--secondary btn--long">
+          <a href="#">JOIN NOW</a>
+        </div>
+      </div>
+    </div> -->
