--- a/ycyc.CSS/style.css
+++ b/ycyc.CSS/style.css
@@ -375,13 +375,13 @@ a {
 .card--primary .badge--primary {
   background-color: rgb(66, 115, 207);
   letter-spacing: 1px;
-  font-weight: 550;
+  font-weight: 500;
 }
 
 .card--secondary .badge--secondary {
   background-color: rgb(0, 207, 235);
   letter-spacing: 1px;
-  font-weight: 550;
+  font-weight: 500;
 }
 
 /* plan + card  */
@@ -796,7 +796,7 @@ a {
 /* Nav Bar section*/
 
 .nav--block {
-  padding-top: 1rem 0;
+  padding-top: 1rem;
   background-color: black;
   border-bottom: 2px solid rgb(29, 29, 29);
 }
